# Space

./: .gitignore  CMakeLists.txt  MakeBat.bat  MakeShell.ps1  Makefile  README.md
scripts/: MakeShell.ps1
src/Engine/: CMakeLists.txt
src/Engine/Audio/: CMakeLists.txt
src/Engine/Audio/Tests/: CMakeLists.txt
src/Engine/Essentials/: CMakeLists.txt
src/Engine/Essentials/Editors/: EditorsDefaultPriority.cpp
src/Engine/Essentials/Editors/GameObject/: GameObjectEditor.cpp  GameObjectEditorUI.cpp
src/Engine/Essentials/Editors/LightSource/: LightSourceEditor.cpp  LightSourceEditorUI.cpp
src/Engine/Essentials/Editors/Render/: RenderEditor.cpp  RenderEditorUI.cpp
src/Engine/Essentials/Materials/: PBRMaterial.cpp
src/Engine/Essentials/Menus/: MenusDefaultPriority.cpp
src/Engine/Essentials/Meshes/: Cube.cpp  Plane.cpp  Sphere.cpp
src/Engine/Essentials/Scripts/: CMakeLists.txt  ScriptsDefaultPriority.cpp
src/Engine/Essentials/Textures/: PBRTexture.cpp
src/Engine/Graphics/: CMakeLists.txt  Camera.cpp  CameraManager.cpp  Container.cpp  Material.cpp  Mesh.cpp  Projection.cpp  RenderPool.cpp  Shader.cpp
src/Engine/Graphics/Camera/: Camera.cpp  CameraManager.cpp  Projection.cpp  VirtualCamera.cpp
src/Engine/Graphics/Elements/: Container.cpp  Line.cpp  Material.cpp  Mesh.cpp  Shader.cpp  Texture.cpp
src/Engine/Graphics/Light/: AmbientLight.cpp  DirectionalLight.cpp  LightAttenuation.cpp  LightContainer.cpp  LightManager.cpp  LightSource.cpp  LightSourceUniformGetter.cpp  LightValue.cpp
src/Engine/Graphics/PostProcessing/: CMakeLists.txt  FrameBuffer.cpp  FrameBufferTexture.cpp  FrameBufferTextureManager.cpp  FrameBufferTextureRenderer.cpp  PostProcessingBufferHandler.cpp  PostProcessingManager.cpp  PostProcessingSettings.cpp  RenderBufferHandler.cpp
src/Engine/Graphics/Render/: RenderElement.cpp  RenderManager.cpp  RenderPool.cpp  RenderUnit.cpp  RenderUnitBuilder.cpp
src/Engine/Graphics/Tests/: CMakeLists.txt
src/Engine/Input/: CMakeLists.txt
src/Engine/Input/Main/: Element.cpp  Scheme.cpp
src/Engine/Input/Tests/: CMakeLists.txt
src/Engine/Main/: CMakeLists.txt  Engine.cpp  Modules.cpp  Window.cpp
src/Engine/Main/Modules/: GraphicsModule.cpp  InputModule.cpp  TimeModule.cpp  UIModule.cpp
src/Engine/Objects/: CMakeLists.txt  GameObject.cpp  Scene.cpp  Script.cpp  Transform.cpp
src/Engine/Objects/Tests/: CMakeLists.txt  tests.cpp
src/Engine/Tools/: CMakeLists.txt
src/Engine/Tools/Log/: Logger.cpp
src/Engine/Tools/Other/: Files.cpp  GL.cpp  Geometry.cpp  ImGui.cpp  Paths.cpp
src/Engine/Tools/Tests/: CMakeLists.txt  test.cpp
src/Engine/UI/: CMakeLists.txt
src/Engine/UI/Editor/: Editor.cpp  EditorContainer.cpp  EditorManager.cpp  EditorUI.cpp
src/Engine/UI/Menu/: Menu.cpp  MenuContainer.cpp  MenuManager.cpp  MenuUI.cpp
src/Engine/UI/Tests/: CMakeLists.txt
src/Engine/Window/: CMakeLists.txt  Window.cpp
(+349 files in other folders)
